--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,64 @@ header h1:hover, a:hover{
     color: #fff; 
  }
 
+ main{
+    padding: 5px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+ }
+
+ /*MAIN CONTENT */
+ main .main-content{
+    display: flex;
+    flex-direction: column;
+ }
+
+ main .main-content h2{
+    margin-bottom: 2%;
+    font-size: 2.2em;
+ }
+
+ main .main-content .text{
+    margin-bottom: 10%;
+ }
+
+ main .main-content .text p{
+    width: 73%;
+    font-size: 1.2em;
+    font-weight: 300;
+ }
+
+ /*---- CARDS  -----*/
+ main .techs .cards-container{
+    display: flex;
+    align-items: center;
+ }
+
+ main .techs .cards-container .card{
+    width: 120px;
+    height: 120px;
+    padding: 10px;
+    background-color: #eee;
+    border-radius: 8px;
+    margin-right: 1.8em;
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: box-shadow 0.25s ease-in-out;
+}
+
+ main .techs .cards-container .card img {
+    width: 80%;
+ }
+
+ main .techs .cards-container .card:hover{
+    box-shadow: 0px 0px 8px #00e0ff;
+ }
  footer{
     background-color: #222;
     padding: 16px;
