--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ header nav a{
 }
 
 header h1, a{
-   color:peru; 
+   color: #00e0ff; 
    transition: 0.2s ease-in-out;
 }
 
@@ -32,7 +32,7 @@ header h1:hover, a:hover{
  }
 
  main{
-    padding: 5px;
+    padding: 45px;
 
     display: flex;
     align-items: center;
@@ -58,6 +58,7 @@ header h1:hover, a:hover{
     width: 73%;
     font-size: 1.2em;
     font-weight: 300;
+    line-height: 1.6em;
  }
 
  /*---- CARDS  -----*/
@@ -72,7 +73,8 @@ header h1:hover, a:hover{
     padding: 10px;
     background-color: #eee;
     border-radius: 8px;
-    margin-right: 1.8em;
+    margin-right: 0.9em;
+    margin-left: 0.9em;
     cursor: pointer;
 
     display: flex;
@@ -89,6 +91,29 @@ header h1:hover, a:hover{
  main .techs .cards-container .card:hover{
     box-shadow: 0px 0px 8px #00e0ff;
  }
+
+ /*---  FIGURE ----*/
+ main figure{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+ }
+
+ main figure img{
+    width: 300px;
+    height: 300px;
+    border-radius: 300px;
+    cursor: pointer;
+
+    margin-bottom: 6%;
+    border: 1px #00e0ff solid;
+    transition: 0.2s ease-in-out;
+ }
+
+ main figure img:hover{
+    box-shadow: 0px 0px 6px #00e0ff;
+ }
  footer{
     background-color: #222;
     padding: 16px;
@@ -101,4 +126,67 @@ header h1:hover, a:hover{
  footer span{
     font-size: 0.8em;
     font-weight: 200;
+ }
+
+ @media (max-width: 1200px){
+    main{
+        width: 100%;
+
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .main-content{
+        width: 100%;
+        align-items: center;
+
+        margin-bottom: 15%;   
+    }
+    main .main-content .text, .techs{
+        text-align: center;        
+    }
+
+    main .main-content .text p{
+        width: 100%;
+        font-size: 0.9em;
+    }
+
+    main .techs .cards-container, .main-content .text p{
+        margin-top: 32px;
+    }
+ }
+
+ @media (max-width: 700px){
+    header{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        text-align: center;
+    }
+    header h1{
+        font-size: 2em;
+    }
+
+    header nav{
+        margin-top: 24px;
+    }
+
+    header nav a{
+        font-size: 1em;
+    }
+
+    main .techs .cards-container .card{
+        width: 60px;
+        height: 60px;
+    }
+
+    main .main-content .text h2, .main-content .techs h2{
+        font-size: 1.8em;
+    }
+
+    main figure img{
+        width: 250px;
+        height: 250px;
+    }
  }
