alterandoa cor do card

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ header h1:hover, a:hover{
     width: 120px;
     height: 120px;
     padding: 10px;
-    background-color: #eee;
+    background-color: #222;
     border-radius: 8px;
     margin-right: 0.9em;
     margin-left: 0.9em;
