--- a/css/style.css
+++ b/css/style.css
@@ -1,159 +1,294 @@
-header{
-    background-color: #222;
-    padding: 25px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Josefin Sans', sans-serif;
 
+}
+
+.caixa-principal {
+    height: 100vh;
+    width: 100%;
+    /*background-image: url(./img/background.png);
+    background-size: 400px;
+    background-position: right;
+   
+    background-repeat: no-repeat; */
+    background-color: #191919;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 25px;
+}
+
+.portfolio {
+    color: #ffffff;
+    font-size: 40px;
+    font-weight: 500;
+}
+.portfolio span {
+    color: #f9004d;
+}
+
+li {    
+    list-style: none;
+    display: inline-block;
+    font-size: 25px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover{
+    color:  #f9004d;
+    transition: 0.5;
+}
+
+
+.caixa-principal h2{
+    color: white;
+}
+.meu-nome{
+    padding: 40px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-header h1{
-    font-size: 2.8em;
-    font-weight: 200;
-    cursor: pointer;
+.meu-nome img{
+    width: 500px;
+    padding: 40px;
 }
 
-header nav{
+h1{
+    color: white;
+    font-size: 75px;
+}
+h1 span {
+    color: #f9004d;
+}
+
+.meu-nome h3 {
+    color: white;
+    font-size: 25px;
+}
+
+section{
     display: flex;
     align-items: center;
-}
-header nav a{
-    margin-right: 1em;
-    font-size: 1.5em;
-}
-
-header h1, a{
-   color: #00e0ff; 
-   transition: 0.2s ease-in-out;
-}
-
-header h1:hover, a:hover{
-    color: #fff; 
- }
-
- main{
-    padding: 45px;
-
-    display: flex;
-    align-items: center;
+    padding: 60px 15%;
+    background-color: black;
     justify-content: space-between;
- }
-
- /*MAIN CONTENT */
- main .main-content{
-    display: flex;
-    flex-direction: column;
- }
-
- main .main-content h2{
-    margin-bottom: 2%;
-    font-size: 2.2em;
- }
-
- main .main-content .text{
-    margin-bottom: 10%;
- }
-
- main .main-content .text p{
-    width: 73%;
-    font-size: 1.2em;
-    font-weight: 300;
-    line-height: 1.6em;
- }
-
- /*---- CARDS  -----*/
- main .techs .cards-container{
-    display: flex;
-    align-items: center;
- }
-
- main .techs .cards-container .card{
-    width: 120px;
-    height: 120px;
-    padding: 10px;
-    background-color: #222;
-    border-radius: 8px;
-    margin-right: 0.9em;
-    margin-left: 0.9em;
-    cursor: pointer;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    transition: box-shadow 0.25s ease-in-out;
 }
 
- main .techs .cards-container .card img {
-    width: 80%;
- }
+section img {
+    height: 400px;
+    border-radius: 100%;
+    border: 2px solid #f9004d;
+    margin-right: 30px;
+}
 
- main .techs .cards-container .card:hover{
-    box-shadow: 0px 0px 8px #00e0ff;
- }
+section div h2 {
+    color: white;
+    font-size: 75px;
+}
 
- /*---  FIGURE ----*/
- main figure{
+section div p {
+    color: #e2b9c6;
+    font-size: 24px;
+    margin-top: 15px;
+    margin-bottom: 50px;
+}
+
+section div button {
+    color: white;
+    background: #f9004d;
+    height: 50px;
+    width: 170px;
+    font-size: 19px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+}
+section div button:hover {
+    background-color: black;
+    border: 3px solid #f9004d;
+    transform: 0.5s;
+}
+
+.projetos {
+    background-color: #191919;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
+.projetos h2 {
+    color: white;
+    font-size: 75px;
+    text-align: center;
+}
+
+.card {
+    background-color: #000000;
+    height: 365px;
+    width: 335px;
+    border-radius: 20px;
+    padding: 20px 35px;
+    text-align: center;
+}
+
+.card img {
+    height: 100px;
+}
+
+.card h5 {
+    color: white;
+    font-size: 24px;
+}
+
+.card p {
+    color: #e2b9c6;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+.card a {
+    background-color: #f9004d;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: 0.5s;
+    text-decoration: none;
+}
+
+.card a:hover {
+    background-color: transparent;
+    border: 2px solid #f9004d;
+}
+
+.card-projetos {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 100px;
+}
+
+footer {
+    background-color: #000;
+    padding-top: 100px;
+    padding-bottom: 120px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
- }
+}
 
- main figure img{
-    width: 300px;
-    height: 300px;
-    border-radius: 300px;
-    cursor: pointer;
-    margin-bottom: 6%;
-    border: 1px #00e0ff solid;
-    transition: 0.2s ease-in-out;
- }
+footer h5 {
+    color: white;
+    font-size: 30px;
+}
 
- main figure img:hover{
-    box-shadow: 0px 0px 6px #00e0ff;
- }
- footer{
-    background-color: #222;
-    padding: 16px;
+footer p {
+    color: white;
+    font-size: 18px;
+    margin-top: 14px;
+    margin-bottom: 30px;
+}
 
+.social {
+    display: flex;
+    gap: 20px;
+}
+
+.social img {
+    height: 52px;
+    /*border-radius: 50%;*/
+}
+
+.social a {
+   /* background-color: #f9004d; */
+    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
- }
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+}
 
- footer span{
-    font-size: 0.8em;
-    font-weight: 200;
- }
+.social a:hover {
+    transform: scale(1.3);
+    transition: 0.7s;
+}
 
- @media (max-width: 1200px){
-    main{
+/* Responsividade */
+
+@media screen and (max-width: 1024px) {
+    .meu-nome h1 {
+        padding-top: 140px;
+        text-align: center;
+    }
+    .meu-nome img {
+        display: none;
+    }
+
+    body{
         width: 100%;
 
         flex-direction: column;
         align-items: center;
         justify-content: center;
     }
-    .main-content{
-        width: 100%;
+    #sobre{
+        flex-direction: column;
         align-items: center;
-
-        margin-bottom: 15%;   
+        justify-content: center;
     }
-    main .main-content .text, .techs{
+
+    #sobre img{
+        width: 80%;
+        height: 50%;
+        margin: 20px;
+    }
+    .projetos{
+        width: 100%;
+        align-items: center;   
+    }
+
+    .card-projetos {
+        
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .card{
+        margin: 10px;
+    }
+    main .meu-nome .text, .techs{
         text-align: center;        
     }
 
-    main .main-content .text p{
+    main p{
         width: 100%;
         font-size: 0.9em;
     }
 
-    main .techs .cards-container, .main-content .text p{
+    main .techs .card-projetos, .main-content .text p{
         margin-top: 32px;
     }
  }
+
+
 
  @media (max-width: 700px){
     header{
@@ -174,18 +309,6 @@ header h1:hover, a:hover{
     header nav a{
         font-size: 1em;
     }
+}
 
-    main .techs .cards-container .card{
-        width: 60px;
-        height: 60px;
-    }
 
-    main .main-content .text h2, .main-content .techs h2{
-        font-size: 1.8em;
-    }
-
-    main figure img{
-        width: 250px;
-        height: 250px;
-    }
- }
